# pip-download

./: .coveragerc  .gitignore  HISTORY.rst  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.md  README.rst  README_zh_CN.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
pipdownload/: __init__.py  __main__.py  cli.py  exceptions.py  settings.py  utils.py
requirements/: all.txt  base.txt  development.txt  testing.txt
scripts/: format-imports.py  format.py
tests/: cli_demo.py  conftest.py  demo.py  test_cli.py  test_requirements_redundant.txt  test_utils.py
tests/commands/: test_cli.py
tests/data/: click.html  requirements_redundant.txt
