[metadata]
name = 'pipdownload'
version = '0.0.1'
description = 'A wrapper for pip download'
author = 'youngquan'
author_email = 'youngquan@qq.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/youngquan/pipdownload'

[requires]
python_version = ['3.5', '3.6', '3.7']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
